frontend : fix overflow of alert-word-status-text in narrowed window.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -492,6 +492,10 @@ input[type="checkbox"] {
     margin-top: 1px;
 }
 
+.alert_word_status_text {
+    word-break: break-word;
+}
+
 .alert-notification {
     display: inline-block;
     vertical-align: top;
